@@ -88,9 +88,8 @@ char * create_schedule_omp (credentials_t *, params_t *);
 
 char * delete_schedule_omp (credentials_t *, params_t *);
 char * delete_trash_schedule_omp (credentials_t *, params_t *);
-char * get_schedule_omp (credentials_t *, const char *, const char *,
-                         const char *);
-char * get_schedules_omp (credentials_t *, const char *, const char *);
+char * get_schedule_omp (credentials_t *, params_t *);
+char * get_schedules_omp (credentials_t *, params_t *);
 
 char * get_target_omp (credentials_t *, const char *, const char *,
                        const char *);
@@ -137,21 +136,19 @@ char * delete_override_omp (credentials_t *, params_t *);
 char * edit_override_omp (credentials_t *, params_t *);
 char * save_override_omp (credentials_t *, params_t *);
 
-char * get_slave_omp (credentials_t *, const char *, const char *,
-                      const char *);
-char * get_slaves_omp (credentials_t *, const char *, const char *);
+char * get_slave_omp (credentials_t *, params_t *);
+char * get_slaves_omp (credentials_t *, params_t *);
 char * create_slave_omp (credentials_t *, params_t *);
 char * delete_slave_omp (credentials_t *, params_t *);
 char * delete_trash_slave_omp (credentials_t *, params_t *);
 
-char * get_system_reports_omp (credentials_t *, const char *, const char *);
+char * get_system_reports_omp (credentials_t *, params_t *);
 char * get_system_report_omp (credentials_t *, const char *, const char *,
                               const char *, enum content_type*, char **,
                               gsize *);
 
-char * get_report_format_omp (credentials_t *, const char *, const char *,
-                              const char *);
-char * get_report_formats_omp (credentials_t *, const char *, const char *);
+char * get_report_format_omp (credentials_t *, params_t *);
+char * get_report_formats_omp (credentials_t *, params_t *);
 char * delete_report_format_omp (credentials_t *, params_t *);
 char * delete_trash_report_format_omp (credentials_t *, params_t *);
 char * edit_report_format_omp (credentials_t *, params_t *);
